--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "redirects": [
     {
       "source": "/",
-      "destination": "https://github.com/JamesLovern/spotify-readme-stats"
+      "destination": "https://open.spotify.com/user/james.lovern"
     }
   ]
 }
